--- a/t3.html
+++ b/t3.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Titel</title>
   </head>
   <body>
-    Hallo Welt ohne Navigation
+    Hallo Welt ohne Navigation und Statuszeile
   </body>
 </html>
