--- a/t4.html
+++ b/t4.html
@@ -8,6 +8,9 @@
     <title>Titel</title>
   </head>
   <body>
-    Hallo Welt ohne Navigation und Statuszeile
+    Hallo Softlinks<a href=>
+  <a href="http://www.tagesschau.de/">ARD Tagesschau</a> - ein externer Verweis<br>
+  <a href="./t2.html">t2</a> - ein relativer Verweis<br>
+  <a href="./t3.html">t3</a> - ein relativer Verweis<br>
   </body>
 </html>
