--- a/t3.html
+++ b/t3.html
@@ -8,6 +8,6 @@
     <title>Titel</title>
   </head>
   <body>
-    Hallo Welt ohne Navigation und Statuszeile
+    Hallo Welt ohne Navigation mit Skript für Links
   </body>
 </html>
