--- a/t4.html
+++ b/t4.html
@@ -9,7 +9,7 @@
     <title>Titel</title>
   </head>
   <body>
-    Hallo Softlinks<a href=>
+    Hallo. Links mit Skript.<a href=>
   <a href="http://www.tagesschau.de/">ARD Tagesschau</a> - ein externer Verweis<br>
   <a href="./t2.html">t2</a> - ein relativer Verweis<br>
   <a href="./t3.html">t3</a> - ein relativer Verweis<br>
