--- a/t4.html
+++ b/t4.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     Hallo. Links mit Skript.<a href=>
-  <a href="http://www.tagesschau.de/">ARD Tagesschau</a> - ein externer Verweis<br>
-  <a href="./t2.html">t2</a> - ein relativer Verweis<br>
-  <a href="./t3.html">t3</a> - ein relativer Verweis<br>
+  <a href="http://www.tagesschau.de/">ARD Tagesschau</a> - Externe Links werden nach wie vor im Safari geöffnet<br>
+  <a href="https://roland-schmitz.github.io/t2.html">t2</a> - Interne Links werden auf der gleichen Seite geladen<br>
+  <a href="./t3.html">t3</a> - Relative Links werden auf der gleichen Seite geladen<br>
   </body>
 </html>
